--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prifole Biodata HTML dan CSS</title>
+
+    <!-- Font Google inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Icon Awesome -->
+    <script
+      src="https://kit.fontawesome.com/2577b25eea.js"
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="stylesheet" href="src/style.css" />
   </head>
-  <body>
+  <body style="font-family: Inter, serif">
     <!-- Main Information Start -->
     <main class="mt-36 mb-32">
       <div class="container">
@@ -14,7 +29,9 @@
           <!-- Card Personal Info Start-->
           <div class="w-full px-4 mb-10">
             <div class="bg-[#eee] border border-secondary p-4 pb-10 rounded-lg">
-              <h2 class="text-2xl font-semibold text-dark text-center mb-6">
+              <h2
+                class="text-2xl font-semibold text-dark text-center font-serif mb-6"
+              >
                 Personal Info
               </h2>
               <img
@@ -25,15 +42,16 @@
               <div
                 class="w-8/12 mx-auto items-center justify-center border-t-[1px] border-secondary"
               >
-                <p class="mb-2 mt-6">
-                  <span class="font-medium text-lg">Nama:</span> Vio Actona
-                  putra
+                <p class="mb-2 text-secondary mt-6">
+                  <span class="font-medium text-dark text-lg">Nama:</span> Vio
+                  Actona putra
                 </p>
-                <p class="mb-2">
-                  <span class="font-medium text-lg">Umur:</span> 20 Tahun
+                <p class="mb-2 text-secondary">
+                  <span class="font-medium text-dark text-lg">Umur:</span> 20
+                  Tahun
                 </p>
-                <p class="mb-2">
-                  <span class="font-medium text-lg">Email:</span>
+                <p class="mb-2 text-secondary">
+                  <span class="font-medium text-dark text-lg">Email:</span>
                   <a
                     href=""
                     target="_blank"
@@ -41,8 +59,9 @@
                     >vio.22110@mhs.unesa.ac.id</a
                   >
                 </p>
-                <p class="mb-2 "></p>
-                  <span class="font-medium text-lg">No:</span> +62 812-2894-0876
+                <p class="mb-2 text-secondary">
+                  <span class="font-medium text-dark text-lg">No:</span> +62
+                  812-2894-0876
                 </p>
                 <!-- link Sosial Media Start -->
                 <div class="flex mt-4">
@@ -65,7 +84,7 @@
                       />
                     </svg>
                   </a>
-  
+
                   <!-- Linkedin -->
                   <a
                     href="https://www.linkedin.com/in/actona-putra-002a76255/"
@@ -85,7 +104,7 @@
                       />
                     </svg>
                   </a>
-  
+
                   <!-- Twitter -->
                   <a
                     href="https://x.com/Vioact"
@@ -105,11 +124,11 @@
                       />
                     </svg>
                   </a>
-  
+
                   <!-- github -->
                   <a
                     href="https://github.com/actona110"
-                    class=" border rounded-full p-1 border-secondary text-secondary transition duration-1000 hover:border-primary hover:bg-primary hover:text-white"
+                    class="border rounded-full p-1 border-secondary text-secondary transition duration-1000 hover:border-primary hover:bg-primary hover:text-white"
                   >
                     <svg
                       role="img"
@@ -130,6 +149,52 @@
             </div>
           </div>
           <!-- Card Personal Info End -->
+
+          <!-- Card Bio/Deskripsi Start -->
+          <div class="w-full px-4">
+            <div class="border border-secondary bg-[#eee] p-4 rounded-lg">
+              <h2
+                class="text-2xl font-bold mb-6 font-serif text-dark text-center"
+              >
+                Who Am I?
+              </h2>
+              <h3 class="text-xl font-semibold mb-2 text-dark">
+                Fullstack Developer
+              </h3>
+              <p class="mb-2 text-secondary text-sm">
+                I am a Bachelor of Information Systems student majoring in
+                Informatics Engineering at Surabaya State University, have a
+                great ambition in a career in the fields of Web Development,
+                Data Analyst, and Cyber Security. I am active in organizational
+                active and have successfully carried out coordination
+                activities. Currently, I am looking for independent study
+                opportunities to further develop and grow in my field.
+              </p>
+              <button
+                class="py-2 px-4 border-2 border-primary text-primary text-sm font-semibold rounded-full mt-2 mb-8 hover:bg-primary hover:text-white"
+              >
+                Download My CV
+              </button>
+
+              <h3 class="text-xl font-semibold mb-2 text-dark">My Experties</h3>
+
+              <i class="fa-solid fa-computer text-slate-300 text-4xl"></i>
+              <h4 class="font-semibold mt-2 text-dark">Web Design</h4>
+              <p class="text-slate-500 text-sm">
+                Memahami perancangan figma dengan baik dan memiliki pengalaman
+                dalam menggunakan front end.
+              </p>
+
+              <i
+                class="fa-solid fa-database text-slate-300 text-4xl mt-5 mb-2"
+              ></i>
+              <h4 class="font-semibold text-dark">Database</h4>
+              <p class="text-secondary text-sm">
+                Memahami Konsep Backend dan Database.
+              </p>
+            </div>
+          </div>
+          <!-- Card Bio/Deskripsi End -->
         </div>
       </div>
     </main>
