--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <link rel="stylesheet" href="src/style.css" />
   </head>
-  <body style="font-family: Inter, serif" class="bg-slate-700">
+  <body style="font-family: Inter, serif">
     <!-- Main Information Start -->
-    <main class="mt-36 mb-32">
+    <main id="profile" class="pt-36 pb-32 bg-slate-700">
       <div class="container">
         <div class="flex flex-wrap">
           <!-- Card Personal Info Start-->
@@ -53,9 +53,9 @@
                 <p class="mb-2 text-secondary">
                   <span class="text-dark">Email:</span>
                   <a
-                    href=""
+                    href="vio.22110@mhs.unesa.ac.id"
                     target="_blank"
-                    class="underline transition duration-1000 hover:text-primary"
+                    class="underline transition duration-500 hover:text-primary"
                     >vio.22110@mhs.unesa.ac.id</a
                   >
                 </p>
@@ -127,6 +127,7 @@
                   <!-- github -->
                   <a
                     href="https://github.com/actona110"
+                    target="_blank"
                     class="border rounded-full p-1 border-secondary text-secondary transition duration-1000 hover:border-primary hover:bg-primary hover:text-white"
                   >
                     <svg
@@ -222,5 +223,132 @@
       </div>
     </main>
     <!-- Main Information End -->
+
+    <!-- Information Section Start -->
+    <section id="skill" class="pt-36 pb-32 bg-slate-300">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="text-center mx-auto mb-10">
+            <h2 class="text-4xl font-semibold text-dark mb-2">My Skills</h2>
+            <p class="text-base text-secondary">
+              Skill saya terbagi menjadi dua yaitu Hard Skill dan Soft Skill
+            </p>
+          </div>
+        </div>
+
+        <!-- Card Hard Skill End-->
+        <div class="flex flex-wrap">
+          <div class="w-full px-4">
+            <div
+              class="border border-secondary shadow-xl rounded-lg bg-slate-800 text-white py-10 px-6"
+            >
+              <h3 class="text-2xl text-center font-medium mb-6">Hard Skill</h3>
+              <h4
+                class="text-lg text-font-medium mb-4 border-t-2 border-white pt-4"
+              >
+                Personal Skills
+              </h4>
+              <div class="grid grid-cols-2 gap-5 text-black">
+                <p
+                  class="py-2 px-4 bg-red-500 rounded-full font-semibold text-center"
+                >
+                  FRONT END
+                </p>
+                <p
+                  class="py-2 px-4 bg-lime-500 rounded-full font-semibold text-center"
+                >
+                  BACK END
+                </p>
+                <p
+                  class="py-2 px-4 bg-pink-500 rounded-full font-semibold text-center"
+                >
+                  CLOUD COMPUTING
+                </p>
+                <p
+                  class="py-2 px-4 bg-violet-500 rounded-full font-semibold text-center"
+                >
+                  CRYPTOGRAPHY
+                </p>
+                <p
+                  class="py-2 px-4 bg-yellow-500 rounded-full font-semibold text-center col-span-2"
+                >
+                  COMPETITIVE PROGRAMMING
+                </p>
+              </div>
+
+              <h4
+                class="text-lg text-font-medium mt-6 border-t-2 border-white pt-4 mb-4"
+              >
+                Language
+              </h4>
+              <div class="grid grid-cols-3 gap-4">
+                <div
+                  class="w-20 h-20 bg-orange-500 rounded-full text-center self-center relative"
+                >
+                  <p
+                    class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2"
+                  >
+                    .HTML
+                  </p>
+                </div>
+                <div
+                  class="w-20 h-20 bg-sky-500 rounded-full text-center self-center relative"
+                >
+                  <p
+                    class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2"
+                  >
+                    .CSS
+                  </p>
+                </div>
+                <div
+                  class="w-20 h-20 bg-yellow-500 rounded-full text-center self-center relative"
+                >
+                  <p
+                    class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2"
+                  >
+                    .JS
+                  </p>
+                </div>
+                <div
+                  class="w-20 h-20 bg-violet-500 rounded-full text-center self-center relative"
+                >
+                  <p
+                    class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2"
+                  >
+                    Golang
+                  </p>
+                </div>
+                <div
+                  class="w-20 h-20 bg-red-500 rounded-full text-center self-center relative"
+                >
+                  <p
+                    class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2"
+                  >
+                    .CPP
+                  </p>
+                </div>
+              </div>
+
+              <h4
+                class="text-lg text-font-medium mt-6 border-t-2 border-white pt-4 mb-4"
+              >
+                Framework and Tools
+              </h4>
+
+              <div class="grid grid-cols-3 gap-4">
+                <p class="py-4 bg-violet-500 text-center">Git & Github</p>
+                <p class="py-4 bg-red-500 text-center">NodeJS & NPM</p>
+                <p class="py-4 bg-sky-500 text-center">Tailwind</p>
+                <p class="py-4 bg-green-500 text-center">ReactJS</p>
+                <p class="py-4 bg-lime-500 text-center">NextJS</p>
+                <p class="py-4 bg-blue-500 text-center">PostgreSQL</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Card Hard Skill End -->
+      </div>
+    </section>
+    <!-- Information Section End -->
   </body>
 </html>
