--- a/index.html
+++ b/index.html
@@ -489,5 +489,29 @@
       </div>
     </section>
     <!-- Contact Section End -->
+
+    <!-- Footer Start -->
+    <footer class="bg-dark pt-6 pb-6">
+      <div class="container">
+        <div class="w-full border-slate-700">
+          <p class="font-medium text-xs text-slate-500 text-center md:text-sm">
+            Dibuat oleh
+            <a
+              href="https://instagram.com/act_putraa"
+              target="_blank"
+              class="font-bold text-primary underline hover:text-blue-800"
+              >Vio Actona Putra</a
+            >, menggunakan
+            <a
+              href="https://tailwindcss.com"
+              target="_blank"
+              class="font-bold text-sky-500 underline hover:text-blue-800"
+              >Tailwind CSS</a
+            >.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer End -->
   </body>
 </html>
