--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="#profile" class="absolute header-button top-1/2 left-[425px]"
         >My Profile</a
       >
-      <a href="#contact" class="absolute header-button top-1/2 left-[665px]">
+      <a href="#contact" class="absolute header-button top-1/2 left-[650px]">
         Contact Me
       </a>
     </header>
@@ -552,5 +552,18 @@
       </div>
     </footer>
     <!-- Footer End -->
+
+    <!-- Button Up Start -->
+    <a
+      href="#profile"
+      class="fixed bottom-10 right-10 bg-primary px-4 py-2 rounded-full hover:opacity-80 lg:hidden"
+      ><i class="fa-solid fa-up-long text-white"></i
+    ></a>
+    <a
+      href="#hero"
+      class="fixed bottom-10 right-10 bg-primary px-4 py-2 rounded-full hover:opacity-80 hidden lg:block"
+      ><i class="fa-solid fa-up-long text-white"></i
+    ></a>
+    <!-- Button Up End -->
   </body>
 </html>
