--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -78,10 +78,10 @@
               <img
                 src="img/profile.jpeg"
                 alt="profile"
-                class="rounded-full w-[300px] h-[300px] mx-auto mb-6 lg:w-[200px] lg:h-[200px]"
+                class="rounded-full w-[300px] h-[300px] mx-auto mb-6 lg:w-[200px] lg:h-[200px] xs:w-[250px] xs:h-[250px]"
               />
               <div
-                class="w-8/12 mx-auto items-center justify-center border-t-[1px] border-secondary lg:w-10/12"
+                class="w-8/12 mx-auto items-center justify-center border-t-[1px] border-secondary lg:w-10/12 xs:w-11/12"
               >
                 <p class="mb-2 text-secondary mt-6">
                   <span class="text-dark">Nama:</span> Vio Actona putra
@@ -229,6 +229,7 @@
                     alt="logo unesa"
                     width="150"
                     height="150"
+                    class="xs:w-[150px] xs:h-[150px] xs:mt-8"
                   />
                   <div class="mt-6 text-sm ml-2 lg:ml-12">
                     <h4 class="font-semibold mb-2">
@@ -245,6 +246,7 @@
                     alt="logo IC"
                     width="150"
                     height="150"
+                    class="xs:w-[150px] xs:h-[150px] xs:mt-8"
                   />
                   <div class="mt-6 text-sm ml-2 lg:ml-12">
                     <h4 class="font-semibold mb-2">INSAN CENDEKIA GORONTALO</h4>
@@ -303,11 +305,11 @@
                 Hard Skills
               </h3>
               <h4
-                class="text-lg text-font-medium mb-4 border-t-2 border-white pt-4 font-serif lg:text-xl"
+                class="text-lg text-font-medium mb-4 border-t-2 border-white pt-4 font-serif lg:text-xl x"
               >
                 Personal Skills
               </h4>
-              <div class="grid grid-cols-2 gap-5 text-dark">
+              <div class="grid grid-cols-2 gap-5 text-dark xs:grid-cols-1">
                 <p
                   class="py-2 px-4 bg-red-400 rounded-full font-semibold text-center"
                 >
@@ -329,7 +331,7 @@
                   CRYPTOGRAPHY
                 </p>
                 <p
-                  class="py-2 px-4 bg-yellow-500 rounded-full font-semibold text-center col-span-2"
+                  class="py-2 px-4 bg-yellow-500 rounded-full font-semibold text-center col-span-2 xs:col-span-1"
                 >
                   COMPETITIVE PROGRAMMING
                 </p>
@@ -395,7 +397,9 @@
               >
                 Framework and Tools
               </h4>
-              <div class="grid grid-cols-3 gap-4 text-dark font-semibold">
+              <div
+                class="grid grid-cols-3 gap-4 text-dark font-semibold xs:grid-cols-2"
+              >
                 <p class="py-4 bg-violet-500 text-center">Git & Github</p>
                 <p class="py-4 bg-red-400 text-center">NodeJS & NPM</p>
                 <p class="py-4 bg-sky-500 text-center">Tailwind</p>
@@ -418,7 +422,7 @@
                 Soft Skills
               </h3>
               <div
-                class="text-lg text-font-medium mb-4 border-t-2 border-white pt-4 font-semibold text-dark grid grid-cols-2 gap-4"
+                class="text-lg text-font-medium mb-4 border-t-2 border-white pt-4 font-semibold text-dark grid grid-cols-2 gap-4 xs:grid-cols-1"
               >
                 <p
                   class="py-2 bg-violet-500 rounded-full font-semibold text-center"
@@ -431,7 +435,7 @@
                   Public Speaking
                 </p>
                 <p
-                  class="py-2 bg-lime-500 rounded-full font-semibold text-center col-span-2"
+                  class="py-2 bg-lime-500 rounded-full font-semibold text-center col-span-2 xs:col-span-1"
                 >
                   Fluent American English
                 </p>
