Update hero img

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <!-- Hero Section Start -->
     <header
       id="hero"
-      class="w-full h-[500px] bg-[url('/img/background.jpeg')] hidden relative lg:block"
+      style="background-image: url(img/background.jpeg)"
+      class="w-full h-[500px] hidden relative lg:block"
     >
       <h1
         class="absolute text-7xl text-white font-serif left-1/2 -translate-x-1/2 top-[135px]"
