New branch name update untuk mengubah breakpoint gambar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -230,7 +230,7 @@
                     alt="logo unesa"
                     width="150"
                     height="150"
-                    class="xs:w-[150px] xs:h-[150px] xs:mt-8"
+                    class="xs:w-[150px] xs:h-[150px] xs:self-center"
                   />
                   <div class="mt-6 text-sm ml-2 lg:ml-12">
                     <h4 class="font-semibold mb-2">
@@ -247,7 +247,7 @@
                     alt="logo IC"
                     width="150"
                     height="150"
-                    class="xs:w-[150px] xs:h-[150px] xs:mt-8"
+                    class="xs:w-[150px] xs:h-[150px] xs:self-center"
                   />
                   <div class="mt-6 text-sm ml-2 lg:ml-12">
                     <h4 class="font-semibold mb-2">INSAN CENDEKIA GORONTALO</h4>
